<resources>
    <string name="server">http://192.168.8.100:8080</string>
    <string name="app_name">Runner</string>
    <string name="title_activity_maps">Map</string>

    <string name="ws_login">/Runner/webservice/login</string>
    <string name="ws_register">/Runner/webservice/register</string>
    <string name="ws_save_track">/Runner/webservice/saveTrack</string>
    <string name="ws_update_track_markers">/Runner/webservice/updateTracksMarkers</string>
    <string name="ws_save_track_time">/Runner/webservice/saveTrackTime</string>
    <string name="ws_get_five_best_track_times">/Runner/webservice/getFiveBestTimesForTrack</string>

    <string name="username">Login</string>
    <string name="username2">Nazwa użytkownika</string>
    <string name="name">Nazwa:</string>
    <string name="login">Zaloguj</string>
    <string name="password">Hasło</string>
    <string name="register">Zarejestruj</string>
    <string name="repeat_password">Powtórz hasło</string>
    <string name="create_new_account">Nie masz konta? Załóż je!</string>
    <string name="new_track">Nowa trasa</string>
    <string name="cancel">Anuluj</string>
    <string name="end">Zakończ</string>
    <string name="save">Zapisz</string>
    <string name="confimation_cancel_track">Czy na pewno chcesz przerwać trasę? Postęp nie zostanie zapisany</string>
    <string name="your_time">Twój czas</string>
    <string name="provide_name">Wprowadź nazwę</string>
    <string name="start_description">Opis startu:</string>
    <string name="finish_description">Opis mety:</string>
    <string name="start_hint">Krótko opisz cechy miejsca z którego startowałeś. To pomoże użytkownikom znaleźć punkt startu</string>
    <string name="finish_hint">Krótko opisz cechy miejsca z którego startowałeś. To pomoże użytkownikom znaleźć metę</string>
    <string name="empty_field_warning">To pole nie może zostać putse!</string>
    <string name="best_time">Najlpeszy czas:</string>
    <string name="track_lenght">Długość:</string>
</resources>
