<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mapFragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.lukasz.map.MapsActivity">
        <TextView
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="top|right"
            android:id="@+id/timerTextView"
            android:background="@drawable/dialog_background"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:text="00:00"
            android:visibility="gone"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="10dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/navigateButton"
                android:background="@drawable/navigate"
                android:visibility="gone"
                android:onClick="navigateButton"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/trackTimesButton"
                android:background="@drawable/stopwatch"
                android:visibility="gone"
                android:onClick="trackTimesButton"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/showFinishForTrackButton"
                android:background="@drawable/grey_finish_icon"
                android:visibility="gone"
                android:onClick="showFinish"/>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/startTrackButton"
                android:background="@drawable/play"
                android:visibility="gone"
                android:onClick="startTrack"
                />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/cancelRunButton"
                android:background="@drawable/stop_tracking_icon"
                android:visibility="gone"
                android:onClick="cancelTracing"/>
        </LinearLayout>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="bottom|right"
            android:id="@+id/openMenuButtosn"
            android:background="@drawable/open_menu_icon"
            android:onClick="openMenu" />
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="60dp"
            android:layout_gravity="bottom|right"
            android:id="@+id/gpsCenterButtosn"
            android:background="@drawable/gps_icon"
            android:onClick="trackingButton"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="110dp"
            android:layout_gravity="bottom|right"
            android:id="@+id/endTrackingButton"
            android:background="@drawable/stop_tracking_icon"
            android:onClick="stopTracking"
            android:visibility="gone"/>
    </fragment>
    <LinearLayout android:id="@+id/leftMenuLayout"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#E67E22"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="Dla usera"
            android:id="@+id/button"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:textAlignment="viewStart"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/white" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/new_track"
            android:id="@+id/newTrackButton"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:textAlignment="viewStart"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:onClick="newTrack"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/end"
            android:id="@+id/cancelTrackingButton"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:textAlignment="viewStart"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:visibility="gone"
            android:onClick="stopTracking"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/cancel"
            android:id="@+id/endTrackingTextButton"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:textAlignment="viewStart"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:visibility="gone"
            android:onClick="cancelTracing"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/white" />

    </LinearLayout>
</android.support.v4.widget.DrawerLayout>
